// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeDetails should render correctly 1`] = `
<View>
  <SummaryItem
    icon={
      <CopyAble
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            {
              "height": 20,
              "width": 20,
            },
          ]
        }
        value="SEPA"
      />
    }
    information="SEPA"
    isDisputeActive={false}
    label="method"
    shouldBlur={true}
  />
  <SummaryItem
    icon={
      <CopyAble
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            {
              "height": 20,
              "width": 20,
            },
          ]
        }
        value="89.04 EUR"
      />
    }
    information="89.04 EUR"
    isDisputeActive={false}
    label="price"
    shouldBlur={true}
  />
  <SummaryItem
    icon={
      <CopyAble
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            {
              "height": 20,
              "width": 20,
            },
          ]
        }
        value="undefined"
      />
    }
    information="none"
    isAvailable={false}
    isDisputeActive={false}
    label="reference"
    shouldBlur={true}
  />
</View>
`;

exports[`TradeDetails should render correctly for past trade 1`] = `
<View>
  <SummaryItem
    information="89.04 EUR"
    isDisputeActive={false}
    label="price"
    shouldBlur={true}
  />
  <SummaryItem
    information="SEPA"
    isDisputeActive={false}
    label="via"
    shouldBlur={true}
  />
  <SummaryItem
    information={250000}
    isBitcoinAmount={true}
    isDisputeActive={false}
    label="contract.summary.bitcoinAmount"
    shouldBlur={true}
  />
  <SummaryItem
    information="35 089 .66 EUR"
    isDisputeActive={false}
    label="BTC price"
    shouldBlur={true}
  />
</View>
`;

exports[`TradeDetails should show errorBox for missing paymentdata and decryption error 1`] = `
<View>
  <SummaryItem
    information="89.04 EUR"
    isDisputeActive={false}
    label="price"
    shouldBlur={true}
  />
  <SummaryItem
    information="none"
    isAvailable={false}
    isDisputeActive={false}
    label="reference"
    shouldBlur={true}
  />
  <SummaryItem
    information="SEPA"
    isDisputeActive={false}
    label="via"
    shouldBlur={true}
  />
  <ErrorBox
    style={
      {
        "marginTop": 2,
      }
    }
  >
    could not decrypt payment data, ask for details in the chat if needed
  </ErrorBox>
</View>
`;
